--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,121 @@
-h1{
+@import "https://fonts.googleapis.com/css?family=Rancho&effect=shadow-multiple";
+@import "https://fonts.googleapis.com/css?family=Arimo|Titillium+Web|Hind";
+body {
+  font-family: Arimo, Arial, Helvetica, lucida grande, sans-serif;
+  color: #000;
+}
+.header {
+  font-family: Rancho;
+  margin-top: 5%;
+  text-align: center;
+}
+#inputlang {
+  outline: none;
+  width: 30%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+#btn {
+  background-color: #f48024;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+#btn:hover {
+  background-color: rgb(238, 114, 13);
+}
+* {
+  margin: 1%;
+  padding: 0;
+}
 
-color: red;
-font-size: 12px;
+.main {
+  text-align: center;
+}
 
+.profile_image {
+  width: 164px;
+  height: 164px;
+}
+.question-header {
+  font-size: 18px;
+  font-weight: normal;
+  text-decoration: none;
+  cursor: pointer;
+  color: #000;
+}
 
+.question-header:hover {
+  font-size: 20px;
+  font-weight: normal;
+  text-decoration: none;
+  cursor: pointer;
+  color: #f48024;
+}
+
+.nameOwner {
+  font-size: 15px;
+  font-weight: normal;
+  text-decoration: none;
+  cursor: pointer;
+  color: #000;
+}
+
+.nameOwner:hover {
+  font-size: 19px;
+  font-weight: normal;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.list {
+  margin-left: 5%;
+  margin-right: 5%;
+  display: grid;
+  grid-template-columns: 20% 70%;
+  grid-gap: 5px;
+}
+
+.ownner {
+  border: 1px solid #c8ccd0;
+  border-radius: 4px;
+  text-align: center;
+  padding: 17px;
+  box-shadow: inset 0 130px 0 #e7e8ea;
+}
+@media screen and (max-width: 600px) {
+  .list {
+    margin-left: 5%;
+    margin-right: 5%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-gap: 10px;
+  }
+}
+
+@media screen and (min-width: 601px) and (max-width: 800px) {
+  .list {
+    margin-left: 5%;
+    margin-right: 5%;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-gap: 10px;
+  }
+}
+
+@media screen and (min-width: 801px) and (max-width: 1024px) {
+  .list {
+    margin-left: 5%;
+    margin-right: 5%;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    grid-gap: 10px;
+  }
 }
